# levitate

./: .gitignore  LICENSE  README.md  pyproject.toml
installers/: README.md  install_linux.sh  install_macos.command  install_windows.bat
src/levitate/: __init__.py  cli.py
