[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "levitate-coder-cli"
version = "0.1.0"
description = "A lightweight, zero-dependency coding AI CLI"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
lev = "levitate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/levitate"]
